--- a/package.json
+++ b/package.json
@@ -84,7 +84,18 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/dist/",
+      "/guard/",
+      ".dto.ts$",
+      ".entity.ts$",
+      ".module.ts$",
+      ".enum.ts$",
+      "/database-utils",
+      "main.ts"
+    ]
   },
   "main": "index.js",
   "directories": {
